--- a/Directives Demo/package.json
+++ b/Directives Demo/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "angular2(beta)demo1",
+  "name": "Attribute Directives demo",
   "version": "1.0.0",
+  "description": "angular 2 attributes directive demo",
   "scripts": {
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hammadtariq/Angular2Demos/tree/master/Directives%20Demo"
+  },
+  "keywords": [angular,2,typescript,directives,attributes],
+  "author": "hammad tariq <hammadtariq65@gmial.com>",
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.0",
