--- a/Forms Demo/package.json
+++ b/Forms Demo/package.json
@@ -1,21 +1,25 @@
 {
-  "name": "angular.io",
+  "name": "Angular 2 Forms",
   "version": "1.0.0",
-  "description": "",
-   "scripts": {
+  "description": "simple angular 2 forms demo",
+  "scripts": {
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
-  "keywords": [],
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hammadtariq/Angular2Demos/tree/master/Forms%20Demo"
+  },
+  "keywords": [angular,2,typescript,form],
+  "author": "hammad tariq <hammadtariq65@gmial.com>",
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.0",
     "systemjs": "0.19.6",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
+    "es6-promise": "3.0.2",
+    "es6-shim": "0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.10"
