--- a/Hello World/package.json
+++ b/Hello World/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "angular2(beta)demo1",
+  "name": "hello world",
   "version": "1.0.0",
+  "description": "Angular 2 hello world demo with typescript",
   "scripts": {
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hammadtariq/Angular2Demos/master/tree/Hello%20World"
+  },
+  "keywords": [angular,2,typescript,form,custom,validation],
+  "author": "hammad tariq <hammadtariq65@gmial.com>",
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.0",
     "systemjs": "0.19.6",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
+    "es6-promise": "3.0.2",
+    "es6-shim": "0.33.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.10"
