--- a/Hello World/package.json
+++ b/Hello World/package.json
@@ -16,17 +16,18 @@
   "author": "hammad tariq <hammadtariq65@gmial.com>",
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
-    "systemjs": "0.19.6",
-    "es6-promise": "3.0.2",
-    "es6-shim": "0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
-    "zone.js": "0.5.10"
+    "angular2": "2.0.0-beta.11",
+      "systemjs": "0.19.24",
+      "es6-promise": "^3.0.2",
+      "es6-shim": "^0.35.0",
+      "reflect-metadata": "0.1.2",
+      "rxjs": "5.0.0-beta.2",
+      "zone.js": "0.6.4"
   },
   "devDependencies": {
-    "concurrently": "^1.0.0",
-    "lite-server": "^1.3.1",
-    "typescript": "^1.7.3"
+    "concurrently": "^2.0.0",
+     "lite-server": "^2.1.0",
+     "typescript": "^1.8.9",
+     "typings":"^0.7.9"
   }
 }
