--- a/TodoList/package.json
+++ b/TodoList/package.json
@@ -8,22 +8,26 @@
     "lite": "lite-server",
     "start": "concurrent \"npm run tsc:w\" \"npm run lite\" "
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hammadtariq/Angular2Demos/tree/master/TodoList"
+  },
   "keywords": ["todo","list","angular","2","typescript"],
   "author": "hammad tariq <hammadtariq65@gmial.com>",
   "license": "ISC",
   "dependencies": {
-    "angular2": "2.0.0-beta.0",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.33.3",
-    "ng2-material": "^0.1.4",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
-    "systemjs": "0.19.6",
-    "zone.js": "0.5.10"
+    "angular2": "2.0.0-beta.11",
+      "systemjs": "0.19.24",
+      "es6-promise": "^3.0.2",
+      "es6-shim": "^0.35.0",
+      "reflect-metadata": "0.1.2",
+      "rxjs": "5.0.0-beta.2",
+      "zone.js": "0.6.4"
   },
   "devDependencies": {
-    "concurrently": "^1.0.0",
-    "lite-server": "^1.3.1",
-    "typescript": "^1.7.3"
+    "concurrently": "^2.0.0",
+     "lite-server": "^2.1.0",
+     "typescript": "^1.8.9",
+     "typings":"^0.7.9"
   }
 }
