dependencies updated to beta.11

--- a/Youtube Searcher Rxjs/package.json
+++ b/Youtube Searcher Rxjs/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hammadtariq/Angular2Demos/master/tree/YoutubeSearcher"
+    "url": "https://github.com/hammadtariq/Angular2Demos/tree/master/Youtube%20Searcher%20Rxjs"
   },
   "author": "hammad tariq <hammadtariq65@gmial.com>",
   "keywords": [
